# SRHF

./: README.md  base.yml  base_requirements.txt  bdmats.py  environment.yml  hf.py  mo_transform.py  new_rhf.py  nohup.out  options.py  pyproject.toml  requirements.txt  rhf.py  run.py  so_ints.py  sorbitals.py  srhf_helper.py
.github/workflows/: workflow.yml
docs/: degen_tensor.md  soscf_degeneracy.md
old/: input.py  rhf.py  sub.sh
srhf/: __init__.py  atomic_configurations.py  bdmats.py  degen_tensor.py  diis_managerv2.py  mp2.py  new_rhf.py  options.py  psi4test.py  rhf.py  run.py  sorhf.py  srhf_helper.py
srhf/SORHF/: bdmats.py  diis_managerv2.py  mp2.py  options.py  rhf.py  run.py  sorhf.py  srhf_helper.py
test/: conftest.py  smoke_degen.py  smoke_degen_tensor.py  smoke_mp2.py  smoke_mp2_degen_tensor.py  smoke_so_rhf.py  test_ao_to_so_transform.py  test_atomic_configurations.py  test_bdmats.py  test_degen_integral_factory.py  test_degen_tensor.py  test_diis_manager.py  test_load_data.py  test_mp2_degen_tensor.py  test_nothing.py  test_options.py  test_real_diis.py  test_rhf_stability.py  test_sorbital.py  test_soscf_hessian.py
test/data/: nh3_ccpvdz_diis_fixture.npz  nh3_ccpvdz_so_integrals.npz  nh3_sad_data.npz  nh3_so_integrals.npz
